# ztm-rust

activities/: Cargo.toml
clipstash/: Cargo.toml
clipstash/src/lib/: mod.rs
clipstash/src/lib/data/: mod.rs  model.rs  query.rs
clipstash/src/lib/domain/: maintenance.rs  time.rs
clipstash/src/lib/domain/clip/: mod.rs
clipstash/src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  password.rs  posted.rs  shortcode.rs  title.rs
clipstash/src/lib/service/: action.rs  ask.rs  mod.rs
clipstash/src/lib/web/: api.rs  ctx.rs  form.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
